tests/programs/errors/non_bool_condition.tiny
let x: int = 5;
if (x) { print(1); }
