tests/programs/errors/non_bool_condition.expected
Error: if condition must be 'bool', got 'int' (line 2)

1 error(s)
